[workspace]
members = ["contracts/*", "packages/*", "debug/*"]

[workspace.package]
authors = ["mr-t <mr-t@arkprotocol.io>"]
edition    = "2021"
homepage   = "https://arkprotocol.io"
repository = "https://github.com/arkprotocol/cw721-proxy/"
license   = "Apache-2.0"
keywords   = ["cosmos", "cosmwasm"]

[workspace.dependencies]
anyhow = "^1.0"
cosmwasm-std = "^1.5"
cosmwasm-schema = "^1.5"
cw-storage-plus = "^1.2"
cw-multi-test = "^0.20"
cw2 = "^1.1"
cw721 = "^0.18"
cw721-base = "^0.18"
cw-paginate-storage = { version = "^2.4", git = "https://github.com/DA0-DA0/dao-contracts.git" }
cw721-outgoing-proxy = { path = "./packages/cw721-outgoing-proxy", version = "*" }
cw721-outgoing-proxy-derive = { path = "./packages/cw721-outgoing-proxy-derive", version = "*" }
cw721-outgoing-proxy-tester = { path = "./debug/cw721-outgoing-proxy-tester", version = "*" }
cw-rate-limiter = { path = "./packages/cw-rate-limiter", version = "*" }
cw-incoming-proxy = { path = "./packages/cw-incoming-proxy", version = "*" }
cw-incoming-proxy-derive = { path = "./packages/cw-incoming-proxy/derive", version = "*" }
ics721 = { git = "https://github.com/arkprotocol/ark-ics721", branch = "incoming_proxy" } # TODO change to tag once merged to PA repo

quote = "^1.0"
rand = "^0.8"
syn = "^1.0"
schemars = "^0.8"
serde = "^1.0"
thiserror = "^1.0"
proc-macro2 = "^1.0"

[profile.release]
codegen-units = 1
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
panic = 'abort'
incremental = false
overflow-checks = true
