[package]
name = "cw721-governed-rate-limited-proxy"
version     = "0.0.1"
description = "TODO"
license     = { workspace = true }
authors     = { workspace = true }
edition     = { workspace = true }
homepage    = { workspace = true }
repository  = { workspace = true }
keywords    = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
cw721 = { workspace = true }
cw721-proxy = { workspace = true }
cw721-proxy-derive = { workspace = true }
cw-rate-limiter = { workspace = true }
cw721-governed-proxy = { workspace = true, features = ["library"] }
cw-ics721-governance = { workspace = true}
ibc-outgoing-msg = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }
cw721-base = { workspace = true }
cw721-proxy-tester = { workspace = true }
cw721-proxy-multi-test = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }
