[package]
name = "cw721-rate-limited-proxy"
license = "BSD-3"
authors = ["ekez <ekez@withoutdoing.com>"]
edition = "2021"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
cw721 = { workspace = true }
cw721-proxy = { workspace = true }
cw721-proxy-derive = { workspace = true }
cw-rate-limiter = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }
cw721-base = { workspace = true }
cw721-proxy-tester = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }
