[package]
name = "cw721-outgoing-proxy-tester"
version = "0.1.0"
authors = ["ekez <ekez@withoutdoing.com>", "mr-t <mr-t@arkprotocol.io>"]
edition = "2021"
description = "a contract for testing cw721 outgoing proxy implementations"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
cw721 = { workspace = true }
cw721-outgoing-proxy = { path = "../../packages/cw721-outgoing-proxy", version = "*" }
cw721-outgoing-proxy-derive = { path = "../../packages/cw721-outgoing-proxy-derive", version = "*" }
thiserror = { workspace = true }
cw-multi-test = { workspace = true }
