[package]
name = "cw721-proxy-tester"
version = "0.0.1"
authors = ["ekez <ekez@withoutdoing.com>"]
edition = "2021"
description = "a contract for testing cw721 proxy implementations"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = "1.1.1"
cosmwasm-schema = "1.1.1"
cw-storage-plus = "0.15.0"
cw2 = "0.15.0"
cw721 = "0.15.0"
cw721-proxy = { path = "../../packages/cw721-proxy", version = "*" }
cw721-proxy-derive = { path = "../../packages/cw721-proxy-derive", version = "*" }
thiserror = { version = "1" }
cw-multi-test = "0.15.0"
