[package]
name = "cw721-proxy-tester"
version = "0.0.1"
authors = ["ekez <ekez@withoutdoing.com>"]
edition = "2021"
description = "a contract for testing cw721 proxy implementations"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
cw721 = { workspace = true }
cw721-proxy = { workspace = true }
cw721-proxy-derive = { workspace = true }
thiserror = { workspace = true }
cw-multi-test = { workspace = true }
